[tool.poetry]
name = "dl_school"
version = "0.1.0"
description = ""
authors = ["Vladimirov Kirill <kvladimirov.main@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23.1"
pandas = "^1.4.3"
scipy = "^1.9.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
torch = "^1.12.0"
jupyter = "^1.0.0"
jupyterlab = "^3.4.4"
torchtext = "^0.13.0"
torchvision = "^0.13.0"
torchmetrics = "^0.9.3"
pytorch-lightning = "^1.6.5"
llvmlite = "^0.39.0"
scikit-learn = "^1.1.1"
tqdm = "^4.64.0"
tensorboard = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

