[tool.poetry]
name = "dl_school"
version = "0.1.0"
description = ""
authors = ["Vladimirov Kirill <kvladimirov.main@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "1.22"
pandas = "^1.4.3"
scipy = "^1.9.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
torch = "^1.12.0"
jupyter = "^1.0.0"
jupyterlab = "^3.4.4"
torchtext = "^0.13.0"
torchvision = "^0.13.0"
torchmetrics = "^0.9.3"
pytorch-lightning = "^1.6.5"
llvmlite = "^0.39.0"
scikit-learn = "^1.1.1"
tqdm = "^4.64.0"
tensorboard = "^2.9.1"
numba = "^0.56.0"
torchinfo = "^1.7.0"
lightgbm = "^3.3.2"
catboost = "^1.0.6"
mypy = "^0.971"
pytest = "^7.1.2"
loguru = "^0.6.0"
black = "^22.6.0"
hydra-core = "^1.2.0"
hydra-colorlog = "^1.2.0"
pytest-cov = "^3.0.0"
pytest-benchmark = "^3.4.1"
pylint = "^2.14.5"
isort = "^5.10.1"
Cython = "^0.29.32"
coverage = "^6.4.2"
python-dotenv = "^0.20.0"
pre-commit = "^2.20.0"
hydra-optuna-sweeper = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]